@@ -18,44 +18,67 @@ JLoader::register('CategoriesHelper', JPATH_ADMINISTRATOR . '/components/com_cat
 abstract class JHtmlCategoriesAdministrator
 {
 	/**
-	 * @param   int $catid	The category item id
+	 * Render the list of associated items
+	 *
+	 * @param   integer  $catid	     Category identifier to search its associations
+	 * @param   string   $extension  Category Extension
+	 *
+	 * @return  string  The language HTML
 	 */
 	public static function association($catid, $extension = 'com_content')
 	{
+		// Defaults
+		$html = '';
+
 		// Get the associations
-		$associations = CategoriesHelper::getAssociations($catid, $extension);
-
-		JArrayHelper::toInteger($associations);
-
-		// Get the associated categories
-		$db = JFactory::getDbo();
-		$query = $db->getQuery(true)
-			->select('c.*')
-			->from('#__categories as c')
-			->where('c.id IN ('.implode(',', array_values($associations)).')')
-			->join('LEFT', '#__languages as l ON c.language=l.lang_code')
-			->select('l.image')
-			->select('l.title as language_title');
-		$db->setQuery($query);
-		$items = $db->loadObjectList('id');
-
-		// Check for a database error.
-		if ($error = $db->getErrorMsg())
+		if ($associations = CategoriesHelper::getAssociations($catid, $extension))
 		{
-			JError::raiseWarning(500, $error);
-			return false;
-		}
+			JArrayHelper::toInteger($associations);
 
-		// Construct html
-		$text = array();
-		foreach ($associations as $tag => $associated)
-		{
-			if ($associated != $catid)
+			// Get the associated categories
+			$db = JFactory::getDbo();
+			$query = $db->getQuery(true)
+				->select('c.id, c.title')
+				->select('l.sef as lang_sef')
+				->from('#__categories as c')
+				->where('c.id IN (' . implode(',', array_values($associations)) . ')')
+				->join('LEFT', '#__languages as l ON c.language=l.lang_code')
+				->select('l.image')
+				->select('l.title as language_title');
+			$db->setQuery($query);
+
+			try
 			{
-				$text[] = JText::sprintf('COM_CATEGORIES_TIP_ASSOCIATED_LANGUAGE', JHtml::_('image', 'mod_languages/'.$items[$associated]->image.'.gif', $items[$associated]->language_title, array('title' => $items[$associated]->language_title), true), $items[$associated]->title);
+				$items = $db->loadObjectList('id');
 			}
+			catch (RuntimeException $e)
+			{
+				throw new Exception($e->getMessage(), 500);
+			}
+
+			if ($items)
+			{
+				foreach ($items as &$item)
+				{
+					$text = strtoupper($item->lang_sef);
+					$url = JRoute::_('index.php?option=com_categories&task=category.edit&id=' . (int) $item->id . '&extension=' . $extension);
+					$tooltipParts = array(
+						JHtml::_('image', 'mod_languages/' . $item->image . '.gif',
+								$item->language_title,
+								array('title' => $item->language_title),
+								true
+						),
+						$item->title
+					);
+
+					$item->link = JHtml::_('tooltip', implode(' ', $tooltipParts), null, null, $text, $url, null, 'hasTip label label-association label-' . $item->lang_sef);
+				}
+			}
+
+			$html = JLayoutHelper::render('joomla.content.associations', $items);
 		}
-		return JHtml::_('tooltip', implode('<br />', $text), JText::_('COM_CATEGORIES_TIP_ASSOCIATION'), 'admin/icon-16-links.png');
+
+		return $html;
 	}
 
 }
