@@ -22,42 +22,59 @@ abstract class MenusHtmlMenus
 	 */
 	public static function association($itemid)
 	{
+		// Defaults
+		$html = '';
+
 		// Get the associations
-		$associations = MenusHelper::getAssociations($itemid);
-
-		// Get the associated menu items
-		$db = JFactory::getDbo();
-		$query = $db->getQuery(true)
-			->select('m.*')
-			->select('mt.title as menu_title')
-			->from('#__menu as m')
-			->join('LEFT', '#__menu_types as mt ON mt.menutype=m.menutype')
-			->where('m.id IN ('.implode(',', array_values($associations)).')')
-			->join('LEFT', '#__languages as l ON m.language=l.lang_code')
-			->select('l.image')
-			->select('l.title as language_title');
-		$db->setQuery($query);
-
-		try
+		if ($associations = MenusHelper::getAssociations($itemid))
 		{
-			$items = $db->loadObjectList('id');
-		}
-		catch (RuntimeException $e)
-		{
-			JError::raiseWarning(500, $e->getMessage());
-			return false;
-		}
+			// Get the associated menu items
+			$db = JFactory::getDbo();
+			$query = $db->getQuery(true)
+				->select('m.id, m.title')
+				->select('l.sef as lang_sef')
+				->select('mt.title as menu_title')
+				->from('#__menu as m')
+				->join('LEFT', '#__menu_types as mt ON mt.menutype=m.menutype')
+				->where('m.id IN (' . implode(',', array_values($associations)) . ')')
+				->join('LEFT', '#__languages as l ON m.language=l.lang_code')
+				->select('l.image')
+				->select('l.title as language_title');
+			$db->setQuery($query);
 
-		// Construct html
-		$text = array();
-		foreach ($associations as $tag => $associated)
-		{
-			if ($associated != $itemid)
+			try
 			{
-				$text[] = JText::sprintf('COM_MENUS_TIP_ASSOCIATED_LANGUAGE', JHtml::_('image', 'mod_languages/' . $items[$associated]->image . '.gif', $items[$associated]->language_title, array('title' => $items[$associated]->language_title), true), $items[$associated]->title, $items[$associated]->menu_title);
+				$items = $db->loadObjectList('id');
 			}
+			catch (runtimeException $e)
+			{
+				throw new Exception($e->getMessage(), 500);
+			}
+
+			// Construct html
+			if ($items)
+			{
+				foreach ($items as &$item)
+				{
+					$text = strtoupper($item->lang_sef);
+					$url = JRoute::_('index.php?option=com_menus&task=item.edit&id=' . (int) $item->id);
+					$tooltipParts = array(
+						JHtml::_('image', 'mod_languages/' . $item->image . '.gif',
+							$item->language_title,
+							array('title' => $item->language_title),
+							true
+						),
+						$item->title,
+						'(' . $item->menu_title . ')'
+					);
+					$item->link = JHtml::_('tooltip', implode(' ', $tooltipParts), null, null, $text, $url, null, 'hasTip label label-association label-' . $item->lang_sef);
+				}
+			}
+
+			$html = JLayoutHelper::render('joomla.content.associations', $items);
 		}
-		return JHtml::_('tooltip', implode('<br />', $text), JText::_('COM_MENUS_TIP_ASSOCIATION'), 'admin/icon-16-links.png');
+
+		return $html;
 	}
 
 	/**
