@@ -3200,3 +3200,17 @@ table {
 .is-tagbox {
 	float: left;
 }
+
+/* Item associations */
+.item-associations {
+	margin: 0;
+}
+.item-associations li {
+	list-style: none;
+	display: inline-block;
+	margin: 0 0 3px 0;
+}
+.item-associations li a,
+table.adminlist .item-associations li a {
+	color: #ffffff;
+}
