@@ -6613,3 +6613,15 @@ ul.treeselect ul.dropdown-menu li {
 td.has-context {
 	height: 23px;
 }
+/* Item associations */
+.item-associations {
+	margin: 0;
+}
+.item-associations li {
+	list-style: none;
+	display: inline-block;
+	margin: 0 0 3px 0;
+}
+.item-associations li a {
+	color: #ffffff;
+}
