@@ -679,3 +679,16 @@ td.has-context {
 	// Fixes difference in height between normal and hover on cell with context
 	height: 23px;
 }
+
+/* Item associations */
+.item-associations {
+	margin: 0;
+}
+.item-associations li {
+	list-style: none;
+	display: inline-block;
+	margin: 0 0 3px 0;
+}
+.item-associations li a {
+	color: #ffffff;
+}
