@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+22-May-2013 Jean-Marie Simonet
+ # [#30982] Fast links for item language associations management. Thanks Roberto Segura.
+
 22-May-2013 Elin Waring
  # [#30980] Undefined variable extension. Thanks Roberto Segura
 
